--- a/icalc2.html
+++ b/icalc2.html
@@ -31,13 +31,15 @@
     <div id="laskin">
       <div class="laskinrivi">
         <div class="row">
-          <div class="col-6 tulosteet">
-            <label for="luku1">Luku 1</label><br />
-            <input class="syötekenttä1 numerokentta" type="number" name="luku1" />
+          <div class="col-12 tulosteet">
+            <input readonly class="syötehistoria" type="number" name="luku1" />
           </div>
-          <div class="col-6 tulosteet">
-            <label for="luku2">Luku 2</label><br />
-            <input class="syötekenttä2 numerokentta" type="number" name="luku2" />
+        </div>
+      </div>
+      <div class="laskinrivi">
+        <div class="row">
+          <div class="col-12 tulosteet">
+            <input class="syötekenttä1 numerokentta" type="number" name="luku2" />
           </div>
         </div>
       </div>
