--- a/icalc2.html
+++ b/icalc2.html
@@ -32,14 +32,14 @@
       <div class="laskinrivi">
         <div class="row">
           <div class="col-12 tulosteet">
-            <input readonly class="syötehistoria" type="number" name="luku1" />
+            <input readonly class="syötehistoria" type="textfield" name="luku1" />
           </div>
         </div>
       </div>
       <div class="laskinrivi">
         <div class="row">
           <div class="col-12 tulosteet">
-            <input class="syötekenttä1 numerokentta" type="number" name="luku2" />
+            <input class="syötekenttä1 numerokentta" type="textfield" name="luku2" />
           </div>
         </div>
       </div>
@@ -52,9 +52,9 @@
         </div>
       </div>
       <div class="laskinrivi">
-        <button id="c1" class="c nappi">C1</button>
-        <button id="c2" class="c nappi">C2</button>
-        <button id="c1jac2" class="c nappi">C1&2</button>
+        <button id="c1jac2" class="hide nappi">C</button>
+        <button id="c1" class="c nappi">C</button>
+        <button id="c2" class="c nappi">CE</button>
         <button id="jako" class="lt nappi">÷</button>
       </div>
       <div class="laskinrivi">
